# python-ode

./: CHANGELOG.md  CONTRIBUTING.md  PUBLICATION.md  README.md  USECASE_GUIDE.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml
src/python_ode/: __init__.py
src/python_ode/business/: dto.py  exceptions.py  interactor.py
src/python_ode/gateway/: mvvm.py
src/python_ode/view/: ui.py
tests/: test_runtime.py
