[metadata]
name = python-ode
version = 0.1.1
description = Opinionated delivery engine for Python applications.
long_description = file: README.md
long_description_content_type = text/markdown
author = ÂnimaLab
author_email = animalab.desenvolvimento@gmail.com
license = Apache-2.0
url = https://github.com/animalab-netizen/python-ode
project_urls =
    Repository = https://github.com/animalab-netizen/python-ode
    Issues = https://github.com/animalab-netizen/python-ode/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src
